# rustchat

./: .gitignore  Cargo.toml  README.md  start.ps1  start.sh  test_commands.ps1  test_room.json  todo
crates/rustchat-cli/: Cargo.toml
crates/rustchat-cli/src/: colors.rs  main.rs
crates/rustchat-core/: Cargo.toml
crates/rustchat-core/src/: bot.rs  database.rs  lib.rs  user.rs
crates/rustchat-gui/: DEVELOPMENT.md  package-lock.json  package.json
crates/rustchat-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/rustchat-gui/src-tauri/src/: lib.rs  main.rs
crates/rustchat-gui/src/lib/: api.ts  store.ts  tauri-api.ts  types.ts  websocket-types.ts  websocket.ts
crates/rustchat-gui/src/lib/components/: ChatArea.svelte  Friends.svelte  LoginPage.svelte  MainLayout.svelte  RoomList.svelte  SettingsPage.svelte  Sidebar.svelte  StatusBar.svelte
crates/rustchat-gui/src/routes/: +page.svelte
crates/rustchat-server/: Cargo.toml
crates/rustchat-server/src/: main.rs
crates/rustchat-server/src/auth/: api.rs  middleware.rs  mod.rs  service.rs
crates/rustchat-server/src/friend/: api.rs  manager.rs  mod.rs
crates/rustchat-server/src/room/: api.rs  broadcast.rs  manager.rs  mod.rs
crates/rustchat-types/: Cargo.toml
crates/rustchat-types/src/: friend.rs  lib.rs  message.rs  user.rs
