[workspace]
resolver = "2"
members = [
    "crates/rustchat-core",
    "crates/rustchat-server", 
    "crates/rustchat-cli",
    "crates/rustchat-types"
]

[workspace.dependencies]
# 共享依赖版本管理
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
