[package]
name = "rustchat-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustchat-cli"
path = "src/main.rs"

[dependencies]
rustchat-types = { path = "../rustchat-types" }
rustchat-core = { path = "../rustchat-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
futures-util = "0.3.30"
crossterm = "0.29.0" 
url = "2.4"
