[package]
name = "rustchat-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rustchat-types = { path = "../rustchat-types" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
dirs = "6.0.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
