[package]
name = "rustchat-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustchatd"
path = "src/main.rs"

[dependencies]
rustchat-types = { path = "../rustchat-types" }
rustchat-core = { path = "../rustchat-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { version = "0.8.4", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tokio-tungstenite = "0.27.0"
futures-util = "0.3.30"
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
thiserror = { workspace = true }
# 认证相关依赖
argon2 = "0.5"
lettre = { version = "0.11", features = ["smtp-transport", "builder", "tokio1-native-tls"] }
rand = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }
# JWT 相关依赖
jsonwebtoken = "9.2"
base64 = "0.22"
